--- a/home/templates/registration/login.html
+++ b/home/templates/registration/login.html
@@ -12,16 +12,23 @@
     {% if form.errors %}
         <p>Your username and password didn't match. Please try again.</p>
     {% endif %}
+    <div class ="formLay">
     <form method="post" action=".">{% csrf_token %}
+    
         {{ form.as_table }}
+        <label></label>
         <input type="submit" class="LoginB" value="Login" />
         {% if next == "/L/?next=/" %}
+       
         <input type="hidden" name="next"  value="/" />
         {% else %}
         <input type="hidden" name="next" class="inputsHidden"  value="{{ next }}" />
         {% endif %}
     </form>
-    <p> Don't have an account? <a class ="register" href="/register" >Register Here!</a></p>
+    </div>
+      
+
+    <p> Don't have an account?<br> </br> <a class ="register" href="/register" >Register Here!</a></p>
     </div>
 {% endblock %}
 
