--- a/home/static/page.css
+++ b/home/static/page.css
@@ -52,9 +52,10 @@ color: #e3b000;
 h3{
 color: #e3b000;
  font-size: 25;
- text-align: center;
+ text-align: left;
  font: bold 100%;
  padding: 10px;
+ 
 }
 
 p3{
