--- a/home/static/page.css
+++ b/home/static/page.css
@@ -49,10 +49,10 @@ color: #e3b000;
 
 
 
-h3{
+h99{
 color: #e3b000;
  font-size: 25;
- text-align: left;
+ text-align: center;
  font: bold 100%;
  padding: 10px;
  
